--- a/index.html
+++ b/index.html
@@ -1,52 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Project Personal Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <main>
-      <div id="welcome-section">
-        <h1>Hey We are UMIDJON and ALEJANDRO VALERIO SILVA</h1>
-        <h3>web developers</h3>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Project Personal Portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Umida And Valex</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#welcome-section">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
       </div>
-      <div id="projects">
-        <div id="firstline"><h1>These are some of our projects</h1></div>
-        <div class="samples">
-          <a href="https://hope1226.github.io/Project-Rock-Paper-Scissors/" target="blank">
-            <div class="rock-paper-scissors">
-              <img src="images/RPS.png" alt="RSP">
-              <div class="paragraph">
-                <p>Project-Rock-Paper-Scissors</p>
-              </div>
-            </div></a>
+    </div>
+  </nav>
+  <main>
+    <div id="welcome-section">
+      <h1>Hey We are UMIDJON and ALEJANDRO VALERIO SILVA</h1>
+      <h3>web developers</h3>
+    </div>
+    <div id="projects">
+      <div id="firstline">
+        <h1>These are some of our projects</h1>
+      </div>
+      <div class="samples">
+        <a href="https://hope1226.github.io/Project-Rock-Paper-Scissors/" target="blank">
+          <div class="rock-paper-scissors">
+            <img src="images/RPS.png" alt="RSP">
+            <div class="paragraph">
+              <p>Project-Rock-Paper-Scissors</p>
+            </div>
+          </div>
+        </a>
         <a href="https://hope1226.github.io/Project-calculator/" target="blank">
           <div class="calculator">
-          <img src="images/calculator.png" alt="Calculator">
-          <div class="paragraph">
-            <p>Project-calculator</p>
+            <img src="images/calculator.png" alt="Calculator">
+            <div class="paragraph">
+              <p>Project-calculator</p>
+            </div>
           </div>
-        </div></a>
+        </a>
         <a href="https://hope1226.github.io/Project-Etch-a-Sketch/" target="blank">
           <div class="The-Etch-A-Scretch">
-          <img src="images/etchascretch.png" alt="The-Etch-A-Scretch">
-          <div class="paragraph">
-            <p>Project-Etch-a-Sketch</p>
+            <img src="images/etchascretch.png" alt="The-Etch-A-Scretch">
+            <div class="paragraph">
+              <p>Project-Etch-a-Sketch</p>
+            </div>
           </div>
-        </div></a>
-        </div>
+        </a>
       </div>
-      <div class="navbar">
-        <a href="#welcome-section">About</a>
-        <a href="#projects">Work</a>
-        <a href="#about">Contact</a>
-      </div> 
-    </main>
-	<script  src="js/index.js"></script>
-	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  </body>
-</html>
+    </div>
+
+    <div id="contact">
+      <a rel="stylesheet" href="https://github.com/valexsilva">Valex git hub contact </a>
+      <br/>
+      <a rel="stylesheet" href="https://github.com/Hope1226">Umid git hub contact </a>
+    </div>
+  </main>
+  <script src="js/index.js"></script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+</body>
 
 </html>
 
+</html>
